--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,17 +7,26 @@ environment:
   sdk: '>=3.0.6 <4.0.0'
 
 dependencies:
+  dio: ^5.3.0
+  equatable: ^2.0.5
   flutter:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
+  get_it: ^7.6.0
   go_router: ^10.0.0
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
   intl: any
+  json_annotation: ^4.8.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+  hive_generator: ^2.0.0
+  build_runner: ^2.4.6
+  json_serializable: ^6.7.1
 
 flutter:
   uses-material-design: true
