--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,22 @@ flutter:
   uses-material-design: true
   generate: true
 
+  fonts:
+    - family: Montserrat
+      fonts:
+        - asset: assets/fonts/Montserrat-Regular.ttf
+        - asset: assets/fonts/Montserrat-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/Montserrat-Bold.ttf
+          weight: 700
+    - family: ClimaticaIcons
+      fonts:
+        - asset: assets/fonts/ClimaticaIcons.ttf
+
   assets:
-   - assets/lang/ru.arb
-   - assets/lang/en.arb
+    - assets/lang/ru.arb
+    - assets/lang/en.arb
+
+    - assets/images/svg/onboarding.svg
+    - assets/images/svg/location.svg
+    - assets/images/svg/failure.svg
