--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
+  flutter_svg: ^2.0.7
   get_it: ^7.6.0
   go_router: ^10.0.0
   hive: ^2.2.3
